# neural-risk-engine

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
benchmarks/: README.md  m10-portfolio-v1.json  m10_portfolio.cpp  m2_convergence.cpp  m3_variance_reduction.cpp  m4_delta_validation.cpp  m5_performance.cpp  m7-polynomial-ridge-v1.json  m8-neural-v1.json  m9-onnx-cpp-guarded-v1.json  m9-onnx-python-v1.json  m9_guarded_evaluation.cpp
data/: DATASET_SCHEMA_V1.md  README.md
data/config/: m6-large.cfg  m6-small.cfg  m7-baseline.cfg
docs/: ARCHITECTURE.md  CONVENTIONS.md  GEOMETRIC_ASIAN_DERIVATION.md  M10_FINAL_REPORT.md  M2_CONVERGENCE.md  M3_VARIANCE_REDUCTION.md  M4_DELTA_VALIDATION.md  M5_PERFORMANCE.md  M6_DATASET_GENERATION.md  M7_BASELINE.md  M8_NEURAL_MODEL.md  M9_ONNX_DEPLOYMENT.md  NEXT_STEPS.md  QUANT_PRIMER.md  ROADMAP.md
include/nre/: analytics.hpp  dataset.hpp  domain.hpp  monte_carlo.hpp  neural_router.hpp  onnx_backend.hpp  pricing.hpp  random.hpp  risk.hpp  statistics.hpp
models/: README.md
models/m7/: polynomial-ridge-v1.json
models/m8/: derivative-supervised-v1.json  derivative-supervised-v1.pt  price-only-v1.json  price-only-v1.pt
models/m9/: scalar-price-v1.json  scalar-price-v1.onnx
python/: README.md  pyproject.toml  requirements-m8.txt  requirements-m9.txt
python/config/: m8-neural-v1.json
python/nre_baseline/: __init__.py  artifacts.py  checksums.py  cli.py  dataset.py  evaluation.py  metrics.py  model.py  preprocessing.py
python/nre_neural/: __init__.py  artifacts.py  cli.py  evaluation.py  model.py  preprocessing.py  training.py
python/nre_onnx/: __init__.py  artifact.py  cli.py  evaluation.py  inference.py
python/tests/: test_m10_portfolio.py  test_m7_baseline.py  test_m8_neural.py  test_m9_onnx.py
src/: analytics.cpp  dataset.cpp  dataset_main.cpp  domain.cpp  main.cpp  monte_carlo.cpp  neural_router.cpp  onnx_backend.cpp  pricing.cpp  random.cpp  risk.cpp  statistics.cpp
tests/: analytics_tests.cpp  dataset_tests.cpp  domain_tests.cpp  monte_carlo_tests.cpp  neural_router_tests.cpp  onnx_backend_tests.cpp  pricing_tests.cpp  random_tests.cpp  risk_tests.cpp  statistics_tests.cpp  threading_tests.cpp
