[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nre-baseline"
version = "0.1.0"
description = "Deterministic M7 polynomial-ridge surrogate baseline"
requires-python = ">=3.11,<3.15"
dependencies = ["numpy==2.3.5"]

[tool.setuptools.packages.find]
where = ["."]
include = ["nre_baseline*"]
